<resources>
    <string name="app_name">Foodie</string>
    <string name="userName">Nombre de usuario</string>
    <string name="userPassword">Contraseña</string>
    <string name="signIn">Iniciar sesión</string>
    <string name="noSignedUp">Nuevo en Foodie?</string>
    <string name="manualSignUp">Registrarme en Foodie</string>
    <string name="emailInput">Correo electrónico</string>
    <string name="birthdayInput">Fecha de nacimiento</string>
    <string name="alreadySignedUp">Ya tenés usuario en Foodie?</string>
    <string name="title_activity_firebase_auth_ui">FirebaseAuthUI</string>
    <string name="facebook_app_id">396957251230558</string>
    <string name="fb_login_protocol_scheme">fb396957251230558</string>
    <string name="userSignUp">Registrar Usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="next">Siguiente</string>
    <string name="userRoleOption">Usuario</string>
    <string name="deliveryRoleOption">Delivery</string>
    <string name="firstNameHint">Nombre</string>
    <string name="lastNameHint">Apellido</string>
    <string name="phoneHint">Teléfono</string>
    <string name="addressHint">Dirección</string>
    <string name="streetHint">Calle</string>
    <string name="addressNumberHint">Número</string>
    <string name="cityHint">Ciudad</string>
    <string name="finishRegister">Finalizar</string>
    <string name="pickRegisterOption">Cómo deseas registrarte?</string>
    <string name="pickARole">Tipo de usuario</string>
    <string name="welcomeToFoodie">Bienvenido a Foodie!</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Menus -->
    <string name="menu_profile">Perfil</string>
    <string name="menu_orders">Mis Pedidos</string>

    <string-array name="picture_methods">
        <item>Cámara</item>
        <item>Galería</item>
    </string-array>
    <string name="title_activity_delivery_home">DeliveryHomeActivity</string>

</resources>
