<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fpondarts.foodie.ui.home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_shopFragment"
            app:destination="@id/shopFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fpondarts.foodie.ui.home.ui.my_orders.MyOrdersFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.fpondarts.foodie.ui.home.ui.profile.ProfileFragment"
        android:label="@string/menu_profile" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.fpondarts.foodie.ui.home.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.fpondarts.foodie.ui.home.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.fpondarts.foodie.ui.home.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.fpondarts.foodie.ui.home.ui.home.shop_menu.ShopMenuFragment"
        android:label="shop_fragment"
        tools:layout="@layout/fragment_shop_menu" >
        <argument
            android:name="shopId"
            app:argType="long" />
        <action
            android:id="@+id/action_shopFragment_to_deliveryAddressFragment"
            app:destination="@id/deliveryAddressFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmOrderFragment"
        android:name="com.fpondarts.foodie.ui.home.ui.home.confirm_order.ConfirmOrderFragment"
        android:label="ConfirmOrderFragment" />
    <fragment
        android:id="@+id/deliveryAddressFragment"
        android:name="com.fpondarts.foodie.ui.home.ui.home.delivery_address.DeliveryAddressFragment"
        android:label="delivery_address_fragment"
        tools:layout="@layout/delivery_address_fragment" >
        <action
            android:id="@+id/action_deliveryAddressFragment_to_confirmOrderFragment"
            app:destination="@id/confirmOrderFragment" />
    </fragment>
</navigation>