<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.UserRegisterSecondInput">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[1]" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/streetHint"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/cancel"
        android:background="@color/fui_transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/finishRegister"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/addressNumberHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editText8"
        app:layout_constraintTop_toTopOf="@+id/editText8" />

</androidx.constraintlayout.widget.ConstraintLayout>