<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth2.SignInFragment">
    <data>
        <variable
            name="viewModel"
            type="com.fpondarts.foodie.ui.auth2.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.fpondarts.foodie.ui.auth.SignInActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/appNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#000000"
                    android:textSize="40dp" />

                <EditText
                    android:id="@+id/userNameInput"
                    android:text="@{viewModel.userName}"
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/userName"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:text="@{viewModel.password}"
                    android:layout_width="267dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/userPassword"
                    android:inputType="textPassword" />



                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="218dp"
                    android:layout_height="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/noSignedUp"
                    android:typeface="normal"></TextView>
                <Button
                    android:id="@+id/signInButton"
                    android:onClick="@{viewModel::onSignInButtonClick}"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/signIn" />
                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userSignUp" />


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>